--- a/index.html
+++ b/index.html
@@ -62,83 +62,97 @@
         <img src="imgs/menu.svg" class="t-dot">
         <h1 class="booth-text b8 f10">부스체험 목록</h1>
 
-        <div class="box blur shadow">
+        <div class="box blur shadow" id="List">
             <div class="status"></div>
             <h2 class="f3 b4">FINDER</h2><br>
             <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
         </div>
 
-        <div class="box blur shadow">
+        <div class="box blur shadow" id="List">
             <div class="status"></div>
             <h2 class="f3 b4">FINDER</h2><br>
             <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
         </div>
 
-        <div class="box blur shadow">
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
             <div class="status"></div>
             <h2 class="f3 b4">FINDER</h2><br>
             <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
         </div>
 
-        <div class="box blur shadow">
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        <div class="box blur shadow" id="List">
             <div class="status"></div>
             <h2 class="f3 b4">FINDER</h2><br>
             <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
         </div>
 
-        <div class="box blur shadow">
+        <div class="box blur shadow" id="List">
             <div class="status"></div>
             <h2 class="f3 b4">FINDER</h2><br>
             <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
         </div>
+        <div class="box blur shadow" id="List">
+            <div class="status"></div>
+            <h2 class="f3 b4">FINDER</h2><br>
+            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
+        </div>
+        
 
-        <div class="box blur shadow">
-            <div class="status"></div>
-            <h2 class="f3 b4">FINDER</h2><br>
-            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
-        </div>
-
-        <div class="box blur shadow">
-            <div class="status"></div>
-            <h2 class="f3 b4">FINDER</h2><br>
-            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
-        </div>
-
-        <div class="box blur shadow">
-            <div class="status"></div>
-            <h2 class="f3 b4">FINDER</h2><br>
-            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
-        </div>
-
-        <div class="box blur shadow">
-            <div class="status"></div>
-            <h2 class="f3 b4">FINDER</h2><br>
-            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
-        </div>
-
-        <div class="box blur shadow">
-            <div class="status"></div>
-            <h2 class="f3 b4">FINDER</h2><br>
-            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
-        </div>
-
-        <div class="box blur shadow">
-            <div class="status"></div>
-            <h2 class="f3 b4">FINDER</h2><br>
-            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
-        </div>
-
-        <div class="box blur shadow">
-            <div class="status"></div>
-            <h2 class="f3 b4">FINDER</h2><br>
-            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
-        </div>
-
-        <div class="box blur shadow">
-            <div class="status"></div>
-            <h2 class="f3 b4">FINDER</h2><br>
-            <h3 class="f4 b9">지오지브라를 활용한 이차함수 그리기</h3>
-        </div>
 
 
         
