--- a/Menu.html
+++ b/Menu.html
@@ -49,7 +49,7 @@
     
 
             <div class="blur shadow half-box" id="Logout">
-                <img width="40%" src="imgs/Logout.svg" alt=""><br>
+                <img width="40%" src="imgs/Logout.svg"><br>
                 <h3>로그아웃</h3>
             </div>
 
