--- a/Menu/index.html
+++ b/Menu/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>동아리 페스티벌</title>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/map1-grid.css">
-    <link rel="stylesheet" href="css/map2-grid.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="background ani" style="height: 80%;"></div>
@@ -64,9 +62,9 @@
 
 
 </body>
-<script  src="js/jquery-latest.min.js"></script>
-<script src="js/script.js"></script>
-<script src="js/qr-git.js"></script>
-<script src="js/qr.js"></script>
+<script  src="../js/jquery-latest.min.js"></script>
+<script src="../js/script.js"></script>
+<script src="../js/qr-git.js"></script>
+<script src="../js/qr.js"></script>
 
 </html>
