--- a/Booth/index.html
+++ b/Booth/index.html
@@ -7,11 +7,12 @@
     <title>동아리 페스티벌</title>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/common.css">
 </head>
 <body>
     <div class="background ani" style="height: 80%;"></div>
          <h3 class="b9 f4 title ani" style="color:white; text-align: left; margin-top:20px">동아리 <span class="b2">페스티벌</span></h3>    
-        <img src="imgs/menu.svg" class="t-dot">
+        <img src="../imgs/menu.svg" class="t-dot">
         <h1 class="booth-text b8 f10">부스체험 목록</h1>
         <div style="height: 20px;"></div>
         
@@ -84,7 +85,7 @@
 
         </div>
     <div class="booth-full Box-f">
-        <img src="imgs/close-cross.svg" class="close">
+        <img src="../imgs/close-cross.svg" class="close">
         <label>FINDER</label>
         <h1 class="b8 f7">부스명</h1>
         <hr>
