--- a/Map/index.html
+++ b/Map/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>동아리 페스티벌</title>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/map1-grid.css">
-    <link rel="stylesheet" href="css/map2-grid.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/map1-grid.css">
+    <link rel="stylesheet" href="../css/map2-grid.css">
 </head>
 <body>
     <div class="background ani" style="height: 80%;"></div>
     <h3 class="b9 f4 title ani" style="color:white; text-align: left; margin-top:20px">동아리 <span class="b2">페스티벌</span></h3>
 
     
-        <img src="imgs/menu.svg" class="t-dot">
+        <img src="../imgs/menu.svg" class="t-dot">
 
         <h1 class="booth-text b8 f10" style="margin-bottom: 30px;">지도</h1>
 
@@ -40,6 +41,8 @@
                 <div class="item1 shadow"><h4 class="f3 b4" id="D-10">D-10</h4></div>
                 <div class="item1 shadow"><h4 class="f3 b4" id="D-11">D-11</h4></div>
                 <div class="item1 shadow"><h4 class="f3 b4" id="D-12">D-12</h4></div>
+                <div class="item1 shadow"><h4 class="f3 b4" id="D-00">D-00</h4></div>
+
             </div>
         </div>
 
@@ -79,6 +82,6 @@
         </div>
 
 </body>
-<script  src="js/jquery-latest.min.js"></script>
-<script src="js/script.js"></script>
+<script  src="../js/jquery-latest.min.js"></script>
+<script src="../js/script.js"></script>
 </html>
