--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>동아리 페스티벌</title>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/map1-grid.css">
-    <link rel="stylesheet" href="css/map2-grid.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
     <div class="background ani"></div>
@@ -18,14 +17,6 @@
 
         <h1 class="login-text b8 f10">로그인을<br>진행해주세요.</h1>
       <div class="box blur shadow">
-            <div class="login">
-             <label>아이디</label>
-             <input type="email" placeholder="아이디를 입력하세요.">
-             <br><br>
-             <label>비밀번호</label>
-             <input type="password" placeholder="비밀번호를 입력하세요.">
-            </div> <br>
-            <h5 class='f2' style='text-align:center; color:grey;'>또는</h5><br>
             <a href=""><button style="border-radius:5px; width: 100%; background-color: rgb(240, 240, 240); height: 50px; border: 0.1px solid rgb(230, 230, 230); line-height: 30px; padding: 10px;   box-shadow: 0px 0px 20px -20px black; font-weight:700; font-size:15px;"><img src="https://i.pinimg.com/originals/39/21/6d/39216d73519bca962bd4a01f3e8f4a4b.png" alt="구글 로고" style="width: 30px;  float: left;">구글 로그인</button></a>
 
         </div><br>
@@ -41,6 +32,6 @@
             로그인
         </button>
 </body>
-<script  src="js/jquery-latest.min.js"></script>
+<script src="js/jquery-latest.min.js"></script>
 <script src="js/script.js"></script>
 </html>
