--- a/Ranking/index.html
+++ b/Ranking/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>동아리 페스티벌</title>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/common.css">
 </head>
 <body>
     <div class="background ani" style="height: 75%;"></div>
-    <img src="imgs/menu.svg" class="t-dot">
+    <img src="../imgs/menu.svg" class="t-dot">
 
     </div>
     <h3 class="b9 f4 title ani" style="color:white; text-align: left; margin-top:20px">동아리 <span class="b2">페스티벌</span></h3>
@@ -21,22 +22,22 @@
         <h5 class="f4 b3" style="margin-left: 200px;">1등</h5>
     </div><div style="height: 10px;"></div>
 
-    <hr style="width: 80%; position: relative; left: 50%; margin-left: -40%;">
+    <hr style="width: 80%; position: relative; left: 50%; margin-left: -40%; margin-bottom: 20px;">
 
         <div id="AddRanking">
             <div class="box shadow blur his-box">
-                <img src="imgs/gold-medal.svg" width="40px" style="margin-right: 10px; margin-top: -5px;">
+                <img src="../imgs/gold-medal.svg" width="40px" style="margin-right: 10px; margin-top: -5px;">
                 <h5 class="f4 b3">ㅎㅈㅅ</h5>
             </div><div style="height: 10px;"></div>
 
 
             <div class="box shadow blur his-box">
-                <img src="imgs/medal.svg" width="40px" style="margin-right: 10px; margin-top: -5px;">
+                <img src="../imgs/medal.svg" width="40px" style="margin-right: 10px; margin-top: -5px;">
                 <h5 class="f4 b3">ㄱㅅㅎ</h5>
             </div><div style="height: 10px;"></div>
 
             <div class="box shadow blur his-box">
-                <img src="imgs/medal3.svg" width="40px" style="margin-right: 10px; margin-top: -5px;">
+                <img src="../imgs/medal3.svg" width="40px" style="margin-right: 10px; margin-top: -5px;">
                 <h5 class="f4 b3">ㅇㅊㄹ</h5>
             </div><div style="height: 10px;"></div>
 
@@ -81,6 +82,6 @@
         </div>
         
 </body>
-<script  src="js/jquery-latest.min.js"></script>
-<script src="js/script.js"></script>
+<script  src="../js/jquery-latest.min.js"></script>
+<script src="../js/script.js"></script>
 </html>
