--- a/Select/index.html
+++ b/Select/index.html
@@ -18,20 +18,18 @@
     <h1 class="booth-text b8 f10">원하는<br>카테고리를<br>선택하세요.</h1>
     
     <div class="btn-div">
-        <input type="checkbox" id="cb1">
+        <input type="checkbox" id="cb1" onclick="ckbox()">
         <label for="cb1" class="f4 b6">버튼</label>
-
-        <input type="checkbox" id="cb2">
+        <input type="checkbox" id="cb2" onclick="ckbox()">
         <label for="cb2" class="f4 b6">버튼</label>
-        <input type="checkbox" id="cb3">
+        <input type="checkbox" id="cb3" onclick="ckbox()">
         <label for="cb3" class="f4 b6">버튼</label><br><br>
-        <input type="checkbox" id="cb4">
+        <input type="checkbox" id="cb4" onclick="ckbox()">
         <label for="cb4" class="f4 b6">버튼</label>
-        <input type="checkbox" id="cb5">
+        <input type="checkbox" id="cb5" onclick="ckbox()">
         <label for="cb5" class="f4 b6">버튼</label>
-        <input type="checkbox" id="cb6">
+        <input type="checkbox" id="cb6" onclick="ckbox()">
         <label for="cb6" class="f4 b6">버튼</label>
-
     </div>
     <button class="f4 b7 btn">제출</button>
 
@@ -41,5 +39,4 @@
 <script src="../js/script.js"></script>
 <script src="../js/qr-git.js"></script>
 <script src="../js/qr.js"></script>
-
 </html>
