--- a/Map/index.html
+++ b/Map/index.html
@@ -84,4 +84,5 @@
 </body>
 <script  src="../js/jquery-latest.min.js"></script>
 <script src="../js/script.js"></script>
+<script src="script.js"></script>
 </html>
