--- a/Menu/index.html
+++ b/Menu/index.html
@@ -63,7 +63,7 @@
 
 
 </body>
-<script  src="../js/jquery-latest.min.js"></script>
+<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="../js/script.js"></script>
 <script src="../js/qr-git.js"></script>
 <script src="qr.js"></script>
