--- a/Map/index.html
+++ b/Map/index.html
@@ -82,7 +82,7 @@
         </div>
 
 </body>
-<script  src="../js/jquery-latest.min.js"></script>
+<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="../js/script.js"></script>
 <script src="script.js"></script>
 </html>
