--- a/Ranking/index.html
+++ b/Ranking/index.html
@@ -82,6 +82,6 @@
         </div>
         
 </body>
-<script  src="../js/jquery-latest.min.js"></script>
+<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="../js/script.js"></script>
 </html>
