--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             로그인
         </button>
 </body>
-<script src="js/jquery-latest.min.js"></script>
+<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="js/script.js"></script>
 </html>
