--- a/Booth/index.html
+++ b/Booth/index.html
@@ -9,6 +9,273 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../css/common.css">
 </head>
+<style>body {
+    background-color: #6337FF;
+    max-width: 700px;
+    overflow: hidden;
+}
+body * {
+    font-family: 'Gothic A1', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    -webkit-font-smoothing: antialiased;
+}
+.t-dot {
+    width: 20px;
+    position: absolute;
+    height: 20px;
+    z-index: 100;
+    right: 20px;
+    top:20px;
+}
+.background {
+    width: 100vw;
+    height: 60%;
+    background-color: rgb(228, 228, 228);
+    position: fixed;
+    z-index: -1;
+    bottom: 0px;
+    left: 0px;
+}
+
+
+.booth-text {
+    margin-left: 20px;
+    margin-top: 30px;
+    color:white;
+    margin-bottom: 10px;
+    position: relative;
+    bottom: 0px;
+}
+
+.title {
+    margin-left: 20px;
+    color:black;
+    margin-top: 20px;
+}
+
+
+.half-box * {
+    display: inline-block;
+}
+
+.half-box img {
+    width: 50px;
+    height: 50px;
+}
+
+.half-box > h3 {
+    margin-bottom: 10px;
+}
+
+
+hr {
+    width: 100%;
+    height: 5px;
+    position: relative;
+    left: 50%;
+    margin-left: -50%;
+    border: 0px;
+    border-radius: 20px;
+    background-color: #6337FF;
+    margin-top: 5px;
+
+}
+
+.half-box {
+    text-align: center;
+    width: 90%;
+    background-color: rgba(250, 250, 250, 1);
+    border-radius: 20px;
+    padding: 20px 5%;
+    height: 60%;
+    float: left;
+}
+
+.stat {
+    margin-top: 30px;
+    height: 100px;
+}
+
+
+#AddRanking {
+    height: 70vh;
+    overflow: scroll;
+}
+
+.grid {
+    margin-top: 20px;
+    column-gap: 15px;
+    display: grid;
+    height: 400px;
+    grid-template-columns: repeat(2, 1fr);
+    width: 90%;
+    position: relative;
+    left: 50%;
+    margin-left: -45%;
+}
+
+.score-text {
+    text-align: right;
+    margin-right: 30px;
+}
+
+.act-text {
+    margin-left: 20px;
+    display: inline-block;
+}
+
+.act-score-text {
+    color:rgb(3, 161, 3);
+    display: inline-block;
+}
+
+#AddHistory {
+    max-height: 400px;
+    overflow: scroll;
+}
+
+
+
+.map1-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    width: 90%;
+    height: 450px;
+    overflow: scroll;
+    gap: 5px;
+    padding: 20px 5%;
+    border-radius: 10px;
+}
+
+.map2-grid {
+    overflow: scroll;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(11, 1fr);
+    width: 90%;
+    height: 400px;
+    gap: 5px;
+    padding: 20px 5%;
+    border-radius: 10px;
+    z-index: 1000;
+}
+
+select {
+    width: 90%;
+    height: 40px;
+    border: 0px;
+    border-radius: 20px;
+    position: relative;
+    background-color: white;
+    left: 50%;
+    margin-left: -45%;
+}
+
+.box {
+    width: 80%;
+    position: relative;
+    left: 50%;
+    margin-bottom: 20px;
+    margin-left: -45%;
+    background-color: rgba(250, 250, 250, 1);
+    border-radius: 20px;
+    padding: 20px 5%;
+}
+
+
+hr {
+    width: 40%;
+    margin-bottom: 25px;
+    position: relative;
+    left: 50%;
+    margin-left: -20%;
+    border: 0px;
+    border-radius: 20px;
+    background-color: #6337FF;
+    margin-top: 5px;
+}
+
+.status {
+    margin-right: 10px;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 10px;
+    display: inline-block;
+    float: left;
+}
+
+
+.booth-img {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 5px;
+}
+
+.booth-full > p {
+    width: 100%;
+    margin-top: 10px;
+}
+
+.booth-full {
+    width: 90%;
+    height: 100%;
+    background-color: white;
+    position: fixed;
+    padding: 5%;
+    top: 0px;
+    left: 0px;
+    z-index: 1000;
+}
+
+.close {
+    width: 20px;
+    height: 20px;
+    position: fixed;
+    right: 30px;
+    top: 30px;
+    filter: invert(0.8);
+}
+
+.bo-ti {
+    text-align: center;
+    margin: 30px 0px;
+}
+
+#Add {
+    height: 600px;
+    width: 100%;
+    overflow: scroll;
+    position: relative;
+    bottom: 0px;
+}
+
+
+
+.his-box {
+    margin-bottom: 5px !important;
+}
+
+.his-box * {
+    display: inline-block;
+}
+.his-box > img {
+    float: left;
+}
+
+label {
+    font-size: 13px;
+}
+
+input {
+    border-radius: 20px;
+    text-align: center;
+    border: 0px;
+    height: 40px;
+    background-color: rgb(245, 245, 245);
+}</style>
 <body>
     <div class="background ani" style="height: 80%;"></div>
          <h3 class="b9 f4 title ani" style="color:white; text-align: left; margin-top:20px">동아리 <span class="b2">페스티벌</span></h3>    
