프론트앤드 수정

--- a/Map/Map.html
+++ b/Map/Map.html
@@ -169,5 +169,25 @@ select {
 </body>
 <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="../js/script.js"></script>
-<script src="script.js"></script>
+<script>
+//json
+list = {}
+
+
+function stat(i) {
+    if (i == 0) {
+        return 'green';
+    } else if (i == 1) {
+        return 'orange';
+    } else {
+        return 'red';
+    }
+}
+
+$.Each (list, function (key, value) {
+    var stat_c = stat(int(value.busy));
+    var code = value.code;
+    $('#' + code).css('color', stat_c);
+});
+</script>
 </html>
